bridge/base/whatsapp-bot-deployment.yaml
#! whatsapp-bot-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: whatsapp-bot
    namespace: project-assistant-bot
    labels:
        com.docker.compose.project: project-assistant-bot
        com.docker.compose.service: whatsapp-bot
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: project-assistant-bot
            com.docker.compose.service: whatsapp-bot
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: project-assistant-bot
                com.docker.compose.service: whatsapp-bot
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: whatsapp-bot
                  image: project-assistant-bot-whatsapp-bot
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - curl --fail http://localhost:5000/healthz || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 3
                  ports:
                    - name: whatsapp-b-5000
                      containerPort: 5000
