bridge/base/whatsapp-bot-expose.yaml
#! whatsapp-bot-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: whatsapp-bot
    namespace: project-assistant-bot
    labels:
        com.docker.compose.project: project-assistant-bot
        com.docker.compose.service: whatsapp-bot
spec:
    selector:
        com.docker.compose.project: project-assistant-bot
        com.docker.compose.service: whatsapp-bot
    ports:
        - name: whatsapp-b-5000
          port: 5000
          targetPort: whatsapp-b-5000
