bridge/base/whatsapp-bot-service.yaml
# check if there is at least one published port

#! whatsapp-bot-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: whatsapp-bot-published
    namespace: project-assistant-bot
    labels:
        com.docker.compose.project: project-assistant-bot
        com.docker.compose.service: whatsapp-bot
spec:
    selector:
        com.docker.compose.project: project-assistant-bot
        com.docker.compose.service: whatsapp-bot
    ports:
        - name: whatsapp-b-5000
          port: 5000
          protocol: TCP
          targetPort: whatsapp-b-5000
